# wipac-disk-tracking

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  smartctl.json
.github/workflows/: cd.yml  ci.yml  docker.yml
client/: README.md  client.py  client.sh
doc/: TODO.md
src/: context.rs  database.rs  error.rs  event.rs  lib.rs  main.rs  middleware.rs  old_main.rs  routes.rs  smartctl.rs
src/routes/: health.rs  token.rs  v1.rs
src/routes/v1/: disks.rs  events.rs  health.rs
tests/: mongodb_test.rs  smartctl_serde_test.rs
tools/ci/: check_rust_deps
