[package]
name = "wipac-disk-tracking"
version = "0.3.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = [ "erased-json" ] }
chrono = "0.4.38"
env_logger = "0.11.5"
futures-util = "0.3.30"
gotham = "0.7.4"
gotham_restful = "0.9.0"
log = "0.4.22"
mongodb = "3.0.1"
serde = "1.0.208"
serde_json = "1.0.125"
tokio = { version = "1.39.3", features = [ "full" ] }
uuid = { version = "1.10.0", features = [ "serde", "v4" ] }

[lib]
name = "wipac_disk_tracking"
path = "src/lib.rs"
