[package]
name = "wipac-disk-tracking"
version = "0.4.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.7.7"
axum-extra = { version = "0.9.4", features = [ "erased-json" ] }
axum-keycloak-auth = "0.6.0"
chrono = "0.4.38"
env_logger = "0.11.5"
futures-util = "0.3.31"
gotham = "0.7.4"
gotham_restful = "0.9.0"
log = "0.4.22"
mongodb = "3.1.0"
serde = "1.0.210"
serde_json = "1.0.128"
time = "0.3.36"
tokio = { version = "1.40.0", features = [ "full" ] }
uuid = { version = "1.11.0", features = [ "serde", "v4" ] }

[lib]
name = "wipac_disk_tracking"
path = "src/lib.rs"
