[package]
name = "wipac-disk-tracking"
version = "0.5.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.8.1"
axum-extra = { version = "0.10.0", features = [ "erased-json" ] }
axum-keycloak-auth = "0.8.1"
chrono = "0.4.40"
env_logger = "0.11.7"
futures-util = "0.3.31"
gotham = "0.7.4"
gotham_restful = "0.9.0"
log = "0.4.26"
mongodb = "3.2.2"
serde = "1.0.219"
serde_json = "1.0.140"
time = "0.3.40"
tokio = { version = "1.44.1", features = [ "full" ] }
uuid = { version = "1.16.0", features = [ "serde", "v4" ] }

[lib]
name = "wipac_disk_tracking"
path = "src/lib.rs"
